--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         <!-- End Related posts -->
                     </div>
                     <!-- Button -->
-                    <div class="column_list">
+                    <div class="button_list">
                         <button class="button1">コラム一覧へ <ion-icon style="padding-left: 30px ;"
                                 name="arrow-forward-outline">
                             </ion-icon></button>
