--- a/top.html
+++ b/top.html
@@ -58,9 +58,10 @@
                 <div class="container">
                     <!-- Breadcrumb -->
                     <div class="breadcrumbs">
+                        <!--Event-->
                         <div class="new-event">
                         <p >News / Event </p>
-                        <div class="column_list">
+                        <div class="button-event">
                             <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
                             </ion-icon></button>
                         </div>
@@ -68,6 +69,153 @@
                         <div class="notify">
                             お知らせ / イベント情報
                         </div>
+                        <div class="post_list">
+                            <div class="post_list-item">
+                                <div class="post_date">
+                                    <span class="date">2021/10/13 </span>
+                                    <div class="new">New</div>
+                                </div>
+                                <div class="news-title">
+                                    <a href="#">日本アバイア株式会社、株式会社アドバンスト・メディア共催 コンタクトセンターWebinar</a>
+                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                </div>
+                                <div class="n"></div>
+                            </div>
+                            <div class="post_list-item">
+                                <div class="post_date">
+                                    <span class="date">2021/09/30 </span>
+                                </div>
+                                <div class="news-title">
+                                    <a href="#">altcircleのコンタクトセンターサービス「PrimeTiaas SharePack」に音声認識を標準搭載。</a>
+                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                </div>
+                                <div class="n" style="margin-top: 28px;"></div>
+                            </div>
+                        </div>
+                        <div class="post_list">
+                            <div class="post_list-item">
+                                <div class="post_date">
+                                    <span class="date">2021/09/28 </span>
+                                </div>
+                                <div class="news-title">
+                                    <a href="#">altcircleを機能強化する新AIチャットボット 「PrimeAgent」を提供開始！</a>
+                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                </div>
+                                <div class="n"></div>
+                            </div>
+                            <div class="post_list-item">
+                                <div class="post_date">
+                                    <span class="date">2021/07/28 </span>
+                                </div>
+                                <div class="news-title">
+                                    <a href="#">自社ECサイトの成功に向けた４つの戦略 ～ECビジネスを成功させるために必要なソリューションの実例～</a>
+                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                </div>
+                                <div class="n"></div>
+                            </div>
+                        </div>
+                        <!--End Event-->
+                        <!--Column-->
+                        <div class="column">
+                            <p >Column </p>
+                            <div class="button-column">
+                                <button class="button2">コラム一覧へ<ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
+                                </ion-icon></button>
+                            </div>
+                        </div>
+                        <div class="column-tile">
+                            <p style="font-size: 16px; font-family: NotoSansJP-Bold">コラム</p>
+                            <p style="font-size: 14px; font-family: NotoSansJP-Medium; margin-bottom: 30px">今月のコラムを更新しました。</p>                       </div>
+                        <div class="column_list">
+                            <div class="column_list-item-left">
+                                <img src="img/column-item.png">
+                                <div class="column_list_date">
+                                    <span class="date">2021/10/13 </span>
+                                    <div class="new">New</div>
+                                </div>
+                                <div class="column_list-span">
+                                    <p style="font-size: 20px; font-family: NotoSansJP-Medium">２行以上の場合は、表示されません。最大００文字まで表示されますそれ以降は省略さ…</p>
+                                    <p style="font-size: 16px; font-family: NotoSansJP-Regular">コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字０００…</p>
+                                </div>
+                            </div>
+                            <div class="column_list-item-right">
+                                <div class="news_list" style="margin-top: 0">
+                                    <div class="news-img">
+                                        <img src="img/column-news.png">
+                                    </div>
+                                    <div class="news-content">
+                                        <div class="news-item-inner">
+                                            <div class="post_date">
+                                                <span class="date">2021/10/13 </span>
+                                                <div class="new">New</div>
+                                            </div>
+                                            <div class="news-title">
+                                                <div class="news-item">
+                                                    <a href="#">未経験からCSへ挑戦！</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="a">
+                                            <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news_list">
+                                    <div class="news-img">
+                                        <img src="img/column-news.png">
+                                    </div>
+                                    <div class="news-content">
+                                        <div class="news-item-inner">
+                                            <div class="post_date">
+                                                <span class="date">2021/10/13 </span>
+                                                <div class="new">New</div>
+                                            </div>
+                                            <div class="news-title">
+                                                <div class="news-item">
+                                                    <a href="#">未経験からCSへ挑戦！</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="a">
+                                            <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news_list">
+                                    <div class="news-img">
+                                        <img src="img/column-news.png">
+                                    </div>
+                                    <div class="news-content">
+                                        <div class="news-item-inner">
+                                            <div class="post_date">
+                                                <span class="date">2021/10/13 </span>
+                                                <div class="new">New</div>
+                                            </div>
+                                            <div class="news-title">
+                                                <div class="news-item">
+                                                    <a href="#">未経験からCSへ挑戦！</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="a">
+                                            <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--End Column-->
+                        <!--About-->
+                        <div class="about">About</div>
+                        <div class="about-tile">altcircleとは</div>
+                        <div class="about-item">
+                            <img src="img/about-item.png" style="width: 206.91px; height: 117.15px">
+                            <div class="item_span">
+                                <p>altcircleは日々進化する企業とお客様の顧客接点を高度化するＣＸ（カスタマーエクスペリエンス）サービスの総称です。最高の体験を届けるため、デジタルコミュニケーション、コンテンツ、ＥＣ、コンタクトセンターなど、あらゆるお客様とのタッチポイントに対し、End to Endでサポートします。</p>
+                                <p>サービス名である「altcircle」は、お客さまの変化に寄り添い新たな未来を実現する、という意味を込めた「alt」と、クライアント企業さまとそのお客さまとのご”縁=えん”を育む、という意味を込めた「circle」を掛け合わせて名付けられました。 「alt」には下記の3つの意味が込められています。</p>
+                            </div>
+                        </div>
+                        <!--End About-->
                     </div>
                     <!-- End Breadcrumb -->
                 </div>
