--- a/top.html
+++ b/top.html
@@ -209,13 +209,106 @@
                         <div class="about">About</div>
                         <div class="about-tile">altcircleとは</div>
                         <div class="about-item">
-                            <img src="img/about-item.png" style="width: 206.91px; height: 117.15px">
+                            <div class="item_img"> <img src="img/about-item.png" style="width: 206.91px; height: 117.15px"></div>
                             <div class="item_span">
                                 <p>altcircleは日々進化する企業とお客様の顧客接点を高度化するＣＸ（カスタマーエクスペリエンス）サービスの総称です。最高の体験を届けるため、デジタルコミュニケーション、コンテンツ、ＥＣ、コンタクトセンターなど、あらゆるお客様とのタッチポイントに対し、End to Endでサポートします。</p>
                                 <p>サービス名である「altcircle」は、お客さまの変化に寄り添い新たな未来を実現する、という意味を込めた「alt」と、クライアント企業さまとそのお客さまとのご”縁=えん”を育む、という意味を込めた「circle」を掛け合わせて名付けられました。 「alt」には下記の3つの意味が込められています。</p>
                             </div>
                         </div>
                         <!--End About-->
+                        <div class="alt"><img src="img/alt.png"></div>
+                        <!--youtube-->
+                        <div class="youtube">
+                            <iframe width="100%" height="638" src="https://www.youtube.com/embed/POe9SOEKotk" title="BLACKPINK - ‘Shut Down’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="altcircle">
+                            <div class="altcircle_tile">
+                                <ion-icon name="remove-outline"></ion-icon>
+                                <span>CXサービス『altcircle』の全体像</span>
+                                <ion-icon name="remove-outline"></ion-icon>
+                            </div>
+                            <div class="altcircle_img">
+                                <img src="img/altcircle.png">
+                            </div>
+                            <div class="altcircle_list">
+                                <div class="altcircle_list_item">
+                                    <ion-icon name="checkmark-outline"></ion-icon>
+                                    <span>あらゆるタッチポイントに対応した進化を続けるCXサービス群</span>
+                                </div>
+                                <div class="altcircle_list_item">
+                                    <ion-icon name="checkmark-outline"></ion-icon>
+                                    <span>全体対応から個別支援までお客様のビジネスに合わせた柔軟なサービス提供</span>
+                                </div>
+                                <div class="altcircle_list_item">
+                                    <ion-icon name="checkmark-outline"></ion-icon>
+                                    <span>経験豊富なチームが、お客様のビジネスの目標達成に向け伴走してサポート</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <div class="tab-tile">
+                                <ion-icon name="remove-outline"></ion-icon>
+                                <span>こんな課題を解決できます</span>
+                                <ion-icon name="remove-outline"></ion-icon>
+                            </div>
+                            <div class="tab-bar">
+                                <button class="tab-button">マーケティング <br>
+                                    戦略策定</button>
+                                <button class="tab-button">デジタル <br>
+                                    コミュニケーション</button>
+                                <button class="tab-button">デジタル <br>
+                                    コンテンツ</button>
+                                <button class="tab-button">エンタープライズ <br>
+                                    EC</button>
+                                <button class="tab-button">コンタクト <br>
+                                    センター</button>
+                                <button class="tab-button">データ <br>
+                                    プラットフォーム</button>
+                                <button class="tab-button">ビジネスプロセス <br>
+                                    アウトソーシング</button>
+                            </div>
+                            <div id="Marketing" class="tab-content">
+                                <div class="tab-item">
+                                    <div class="tab-item-img"><img src="img/nam.png"></div>
+                                    <div class="table-item-span">
+                                        <a href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA"><p style="font-size: 20px; font-family: NotoSansJP-Bold">既存情報の分析と適切な施策遂行により、新たなお客様を獲得！</p></a>
+                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">広告費を増やすだけではお客様の囲い込みや拡大が難しかった中、現状分析から課題を顕在化する事ができました。課題であった顧客エンゲージメントを高める提案により、新規の顧客創出の施策を講じることができました。</p>
+                                    </div>
+                                </div>
+                                <div class="tab-item" style="margin-top: 15px">
+                                    <div class="tab-item-img"><img src="img/nu.png"></div>
+                                    <div class="table-item-span">
+                                        <a href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA"><p style="font-size: 20px; font-family: NotoSansJP-Bold">事業会社を跨った情報の統合から、お客様へのワンストップサービスの提供を実現</p></a>
+                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">個社毎に違う事業内容や考え方の整理・調整からお客様情報を統合することにより、グループ一体となり窓口・WEBを通じたワンストップサービス提供を実現できました。
+                                            お客様のライフステージに寄り添ったサービスや情報提供が可能となり、問合せ数も大きく増加しています。</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="Communication" class="tab-content" style="display:none">
+                                <h2>Paris</h2>
+                                <p>Paris is the capital of France.</p>
+                            </div>
+                            <div id="Content" class="tab-content" style="display:none">
+                                <h2>Tokyo</h2>
+                                <p>Tokyo is the capital of Japan.</p>
+                            </div>
+                            <div id="Enterprise" class="tab-content" style="display:none">
+                                <h2>London</h2>
+                                <p>London is the capital city of England.</p>
+                            </div>
+                            <div id="Contact" class="tab-content" style="display:none">
+                                <h2>Paris</h2>
+                                <p>Paris is the capital of France.</p>
+                            </div>
+                            <div id="Data" class="tab-content" style="display:none">
+                                <h2>Tokyo</h2>
+                                <p>Tokyo is the capital of Japan.</p>
+                            </div>
+                            <div id="business" class=tab-content" style="display:none">
+                                <h2>Tokyo</h2>
+                                <p>Tokyo is the capital of Japan.</p>
+                            </div>
+                        </div>
                     </div>
                     <!-- End Breadcrumb -->
                 </div>
@@ -277,3 +370,21 @@
 </body>
 
 </html>
+<script>
+    window.onload = function() {
+        document.querySelectorAll('button').forEach(function (item) {
+            item.addEventListener('click', function (){
+                alert('click');
+            })
+        })
+    }
+
+    // function openTab(tabName) {
+    //     var i;
+    //     var x = document.getElementsByClassName("tab-content");
+    //     for (i = 0; i < x.length; i++) {
+    //         x[i].style.display = "none";
+    //     }
+    //     document.getElementById(tabName).style.display = "block";
+    // }
+</script>
