--- a/top.html
+++ b/top.html
@@ -60,11 +60,12 @@
                     <div class="breadcrumbs">
                         <!--Event-->
                         <div class="new-event">
-                        <p >News / Event </p>
-                        <div class="button-event">
-                            <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
-                            </ion-icon></button>
-                        </div>
+                            <p>News / Event </p>
+                            <div class="button-event">
+                                <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;"
+                                        name="arrow-forward-outline">
+                                    </ion-icon></button>
+                            </div>
                         </div>
                         <div class="notify">
                             お知らせ / イベント情報
@@ -117,15 +118,18 @@
                         <!--End Event-->
                         <!--Column-->
                         <div class="column">
-                            <p >Column </p>
+                            <p>Column </p>
                             <div class="button-column">
-                                <button class="button2">コラム一覧へ<ion-icon style="padding-left: 30px ;" name="arrow-forward-outline">
-                                </ion-icon></button>
+                                <button class="button2">コラム一覧へ<ion-icon style="padding-left: 30px ;"
+                                        name="arrow-forward-outline">
+                                    </ion-icon></button>
                             </div>
                         </div>
                         <div class="column-tile">
                             <p style="font-size: 16px; font-family: NotoSansJP-Bold">コラム</p>
-                            <p style="font-size: 14px; font-family: NotoSansJP-Medium; margin-bottom: 30px">今月のコラムを更新しました。</p>                       </div>
+                            <p style="font-size: 14px; font-family: NotoSansJP-Medium; margin-bottom: 30px">
+                                今月のコラムを更新しました。</p>
+                        </div>
                         <div class="column_list">
                             <div class="column_list-item-left">
                                 <img src="img/column-item.png">
@@ -134,8 +138,11 @@
                                     <div class="new">New</div>
                                 </div>
                                 <div class="column_list-span">
-                                    <p style="font-size: 20px; font-family: NotoSansJP-Medium">２行以上の場合は、表示されません。最大００文字まで表示されますそれ以降は省略さ…</p>
-                                    <p style="font-size: 16px; font-family: NotoSansJP-Regular">コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字０００…</p>
+                                    <p style="font-size: 20px; font-family: NotoSansJP-Medium">
+                                        ２行以上の場合は、表示されません。最大００文字まで表示されますそれ以降は省略さ…</p>
+                                    <p style="font-size: 16px; font-family: NotoSansJP-Regular">
+                                        コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字０００…
+                                    </p>
                                 </div>
                             </div>
                             <div class="column_list-item-right">
@@ -209,17 +216,23 @@
                         <div class="about">About</div>
                         <div class="about-tile">altcircleとは</div>
                         <div class="about-item">
-                            <div class="item_img"> <img src="img/about-item.png" style="width: 206.91px; height: 117.15px"></div>
+                            <div class="item_img"> <img src="img/about-item.png"
+                                    style="width: 206.91px; height: 117.15px"></div>
                             <div class="item_span">
-                                <p>altcircleは日々進化する企業とお客様の顧客接点を高度化するＣＸ（カスタマーエクスペリエンス）サービスの総称です。最高の体験を届けるため、デジタルコミュニケーション、コンテンツ、ＥＣ、コンタクトセンターなど、あらゆるお客様とのタッチポイントに対し、End to Endでサポートします。</p>
-                                <p>サービス名である「altcircle」は、お客さまの変化に寄り添い新たな未来を実現する、という意味を込めた「alt」と、クライアント企業さまとそのお客さまとのご”縁=えん”を育む、という意味を込めた「circle」を掛け合わせて名付けられました。 「alt」には下記の3つの意味が込められています。</p>
+                                <p>altcircleは日々進化する企業とお客様の顧客接点を高度化するＣＸ（カスタマーエクスペリエンス）サービスの総称です。最高の体験を届けるため、デジタルコミュニケーション、コンテンツ、ＥＣ、コンタクトセンターなど、あらゆるお客様とのタッチポイントに対し、End
+                                    to Endでサポートします。</p>
+                                <p>サービス名である「altcircle」は、お客さまの変化に寄り添い新たな未来を実現する、という意味を込めた「alt」と、クライアント企業さまとそのお客さまとのご”縁=えん”を育む、という意味を込めた「circle」を掛け合わせて名付けられました。
+                                    「alt」には下記の3つの意味が込められています。</p>
                             </div>
                         </div>
                         <!--End About-->
                         <div class="alt"><img src="img/alt.png"></div>
                         <!--youtube-->
                         <div class="youtube">
-                            <iframe width="100%" height="638" src="https://www.youtube.com/embed/POe9SOEKotk" title="BLACKPINK - ‘Shut Down’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="100%" height="638" src="https://www.youtube.com/embed/POe9SOEKotk"
+                                title="BLACKPINK - ‘Shut Down’ M/V" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="altcircle">
                             <div class="altcircle_tile">
@@ -271,15 +284,26 @@
                                 <div class="tab-item">
                                     <div class="tab-item-img"><img src="img/nam.png"></div>
                                     <div class="table-item-span">
-                                        <a href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA"><p style="font-size: 20px; font-family: NotoSansJP-Bold">既存情報の分析と適切な施策遂行により、新たなお客様を獲得！</p></a>
-                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">広告費を増やすだけではお客様の囲い込みや拡大が難しかった中、現状分析から課題を顕在化する事ができました。課題であった顧客エンゲージメントを高める提案により、新規の顧客創出の施策を講じることができました。</p>
+                                        <a
+                                            href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
+                                            <p style="font-size: 20px; font-family: NotoSansJP-Bold">
+                                                既存情報の分析と適切な施策遂行により、新たなお客様を獲得！</p>
+                                        </a>
+                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">
+                                            広告費を増やすだけではお客様の囲い込みや拡大が難しかった中、現状分析から課題を顕在化する事ができました。課題であった顧客エンゲージメントを高める提案により、新規の顧客創出の施策を講じることができました。
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="tab-item" style="margin-top: 15px">
                                     <div class="tab-item-img"><img src="img/nu.png"></div>
                                     <div class="table-item-span">
-                                        <a href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA"><p style="font-size: 20px; font-family: NotoSansJP-Bold">事業会社を跨った情報の統合から、お客様へのワンストップサービスの提供を実現</p></a>
-                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">個社毎に違う事業内容や考え方の整理・調整からお客様情報を統合することにより、グループ一体となり窓口・WEBを通じたワンストップサービス提供を実現できました。
+                                        <a
+                                            href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
+                                            <p style="font-size: 20px; font-family: NotoSansJP-Bold">
+                                                事業会社を跨った情報の統合から、お客様へのワンストップサービスの提供を実現</p>
+                                        </a>
+                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">
+                                            個社毎に違う事業内容や考え方の整理・調整からお客様情報を統合することにより、グループ一体となり窓口・WEBを通じたワンストップサービス提供を実現できました。
                                             お客様のライフステージに寄り添ったサービスや情報提供が可能となり、問合せ数も大きく増加しています。</p>
                                     </div>
                                 </div>
@@ -371,9 +395,9 @@
 
 </html>
 <script>
-    window.onload = function() {
+    window.onload = function () {
         document.querySelectorAll('button').forEach(function (item) {
-            item.addEventListener('click', function (){
+            item.addEventListener('click', function () {
                 alert('click');
             })
         })
