--- a/top.html
+++ b/top.html
@@ -266,72 +266,82 @@
                                 <ion-icon name="remove-outline"></ion-icon>
                             </div>
                             <div class="tab-bar">
-                                <button class="tab-button" data-tab="#Marketing">マーケティング <br>
+                                <button class="tab-links active" data-tab="Marketing">マーケティング <br>
                                     戦略策定</button>
-                                <button class="tab-button" data-tab="#Communication">デジタル <br>
+                                <button class="tab-links" data-tab="Communication">デジタル <br>
                                     コミュニケーション</button>
-                                <button class="tab-button" data-tab="#Content">デジタル <br>
+                                <button class="tab-links" data-tab="Content">デジタル <br>
                                     コンテンツ</button>
-                                <button class="tab-button" data-tab="#Enterprise">エンタープライズ <br>
+                                <button class="tab-links" data-tab="Enterprise">エンタープライズ <br>
                                     EC</button>
-                                <button class="tab-button" data-tab="#Contact">コンタクト <br>
+                                <button class="tab-links" data-tab="Contact">コンタクト <br>
                                     センター</button>
-                                <button class="tab-button" data-tab="#Data">データ <br>
+                                <button class="tab-links" data-tab="Data">データ <br>
                                     プラットフォーム</button>
-                                <button class="tab-button" data-tab="#Business">ビジネスプロセス <br>
+                                <button class="tab-links" data-tab="Business">ビジネスプロセス <br>
                                     アウトソーシング</button>
                             </div>
-                            <div id="Marketing" class="tab-content" style="display:none">
-                                <div class="tab-item">
-                                    <div class="tab-item-img"><img src="img/nam.png"></div>
-                                    <div class="table-item-span">
-                                        <a
-                                            href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
-                                            <p style="font-size: 20px; font-family: NotoSansJP-Bold">
-                                                既存情報の分析と適切な施策遂行により、新たなお客様を獲得！</p>
-                                        </a>
-                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">
-                                            広告費を増やすだけではお客様の囲い込みや拡大が難しかった中、現状分析から課題を顕在化する事ができました。課題であった顧客エンゲージメントを高める提案により、新規の顧客創出の施策を講じることができました。
-                                        </p>
+                            <div class="tab-main">
+                                <div class="tab-btn">
+                                    <a href="" class="previous">&#8249;</a>
+                                </div>
+                                <div class="wrapper_tabcontent">
+                                    <div id="Marketing" class="tab-content active">
+                                        <div class="tab-item">
+                                            <div class="tab-item-img"><img src="img/nam.png"></div>
+                                            <div class="table-item-span">
+                                                <a
+                                                    href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
+                                                    <p style="font-size: 20px; font-family: NotoSansJP-Bold">
+                                                        既存情報の分析と適切な施策遂行により、新たなお客様を獲得！</p>
+                                                </a>
+                                                <p style="font-size: 16px; font-family: NotoSansJP-Regular">
+                                                    広告費を増やすだけではお客様の囲い込みや拡大が難しかった中、現状分析から課題を顕在化する事ができました。課題であった顧客エンゲージメントを高める提案により、新規の顧客創出の施策を講じることができました。
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="tab-item" style="margin-top: 15px">
+                                            <div class="tab-item-img"><img src="img/nu.png"></div>
+                                            <div class="table-item-span">
+                                                <a
+                                                    href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
+                                                    <p style="font-size: 20px; font-family: NotoSansJP-Bold">
+                                                        事業会社を跨った情報の統合から、お客様へのワンストップサービスの提供を実現</p>
+                                                </a>
+                                                <p style="font-size: 16px; font-family: NotoSansJP-Regular">
+                                                    個社毎に違う事業内容や考え方の整理・調整からお客様情報を統合することにより、グループ一体となり窓口・WEBを通じたワンストップサービス提供を実現できました。
+                                                    お客様のライフステージに寄り添ったサービスや情報提供が可能となり、問合せ数も大きく増加しています。</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="Communication" class="tab-content">
+                                        <h2>Paris</h2>
+                                        <p>Paris is the capital of France.</p>
+                                    </div>
+                                    <div id="Content" class="tab-content">
+                                        <h2>Tokyo</h2>
+                                        <p>Tokyo is the capital of Japan.</p>
+                                    </div>
+                                    <div id="Enterprise" class="tab-content">
+                                        <h2>London</h2>
+                                        <p>London is the capital city of England.</p>
+                                    </div>
+                                    <div id="Contact" class="tab-content">
+                                        <h2>Paris</h2>
+                                        <p>Paris is the capital of France.</p>
+                                    </div>
+                                    <div id="Data" class="tab-content">
+                                        <h2>Tokyo</h2>
+                                        <p>Tokyo is the capital of Japan.</p>
+                                    </div>
+                                    <div id="Business" class="tab-content">
+                                        <h2>Tokyo</h2>
+                                        <p>Tokyo is the capital of Japan.</p>
                                     </div>
                                 </div>
-                                <div class="tab-item" style="margin-top: 15px">
-                                    <div class="tab-item-img"><img src="img/nu.png"></div>
-                                    <div class="table-item-span">
-                                        <a
-                                            href="https://www.youtube.com/watch?v=vyDjFVZgJoo&list=RDvyDjFVZgJoo&start_radio=1&ab_channel=FIFA">
-                                            <p style="font-size: 20px; font-family: NotoSansJP-Bold">
-                                                事業会社を跨った情報の統合から、お客様へのワンストップサービスの提供を実現</p>
-                                        </a>
-                                        <p style="font-size: 16px; font-family: NotoSansJP-Regular">
-                                            個社毎に違う事業内容や考え方の整理・調整からお客様情報を統合することにより、グループ一体となり窓口・WEBを通じたワンストップサービス提供を実現できました。
-                                            お客様のライフステージに寄り添ったサービスや情報提供が可能となり、問合せ数も大きく増加しています。</p>
-                                    </div>
+                                <div class="tab-btn">
+                                    <a href="" class="next">&#8250;</a>
                                 </div>
-                            </div>
-                            <div id="Communication" class="tab-content" style="display:none">
-                                <h2>Paris</h2>
-                                <p>Paris is the capital of France.</p>
-                            </div>
-                            <div id="Content" class="tab-content" style="display:none">
-                                <h2>Tokyo</h2>
-                                <p>Tokyo is the capital of Japan.</p>
-                            </div>
-                            <div id="Enterprise" class="tab-content" style="display:none">
-                                <h2>London</h2>
-                                <p>London is the capital city of England.</p>
-                            </div>
-                            <div id="Contact" class="tab-content" style="display:none">
-                                <h2>Paris</h2>
-                                <p>Paris is the capital of France.</p>
-                            </div>
-                            <div id="Data" class="tab-content" style="display:none">
-                                <h2>Tokyo</h2>
-                                <p>Tokyo is the capital of Japan.</p>
-                            </div>
-                            <div id="Business" class="tab-content" style="display:none">
-                                <h2>Tokyo</h2>
-                                <p>Tokyo is the capital of Japan.</p>
                             </div>
                         </div>
                         <!-- End Tab -->
@@ -357,10 +367,8 @@
                                         <div class="down-list-item-bottom-img">
                                             <img src="img/img-service-01.png" alt="">
                                         </div>
-                                        <div class="down-list-item-bottom-date">
-                                            <p>2021/10/13</p>
-                                        </div>
                                         <div class="down-list-item-bottom-content">
+                                            <p>2021/10/13</p>
                                             <p>Webサポートとコンタクトセンターとの統合！Web-UX具体的改善で顧客体験を更に高める！SCSKの…</p>
                                         </div>
                                         <div class="button-download">
@@ -377,10 +385,8 @@
                                         <div class="down-list-item-bottom-img">
                                             <img src="img/img-service-02.png" alt="">
                                         </div>
-                                        <div class="down-list-item-bottom-date">
-                                            <p>2021/10/13</p>
-                                        </div>
                                         <div class="down-list-item-bottom-content">
+                                            <p>2021/10/13</p>
                                             <p>CX（カスタマーエクスペリエンス）とは</p>
                                         </div>
                                         <div class="button-download">
@@ -391,13 +397,14 @@
                                 </div>
                                 <div class="down-list-item">
                                     <div class="down-list-item-top">
-                                        <p>CX資料</p>
+                                        <p>会社案内</p>
                                     </div>
                                     <div class="down-list-item-bottom">
                                         <div class="down-list-item-bottom-img">
                                             <img src="img/img-service-03.png" alt="">
                                         </div>
                                         <div class="down-list-item-bottom-content">
+                                            <p></p>
                                             <p>デジタルコミュニケーションがビジネスを飛躍的に成長させる</p>
                                         </div>
                                         <div class="button-download">
@@ -409,6 +416,70 @@
                             </div>
                         </div>
                         <!-- Download -->
+                        <!-- User Experience -->
+                        <div class="user">
+                            <div class="user-tile">
+                                <p>User Experience</p>
+                            </div>
+                            <p style="font-family: NotoSansJP-Bold;font-size: 21px;">ユーザー体験</p>
+                            <div class="user-list">
+                                <div class="user-item">
+                                    <div class="user-img">
+                                        <img src="img/User Experience-img01.png" alt="">
+                                    </div>
+                                    <div class="user-content">
+                                        <div>
+                                            <p style="font-family: NotoSansJP-Bold;font-size: 21px;">よりお客様に最適化されたオファー
+                                            </p>
+                                            <p style="font-family: NotoSansJP-Regular;font-size: 16px;">
+                                                外部のWebサイト上の行動データであるオーディエンスデータと、社内にある個人を特定した顧客データ（購買・お気に入り・閲覧履歴等）を
+                                                組み合わせて解析、
+                                                更にAIで商品・サービスとマッチングすることにより、今までとは違うより最適なおすすめを実現します。</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-item">
+                                    <div class="user-content">
+                                        <div>
+                                            <p style="font-family: NotoSansJP-Bold;font-size: 21px;">実際の店舗にいるかのような接客</p>
+                                            <p style="font-family: NotoSansJP-Regular;font-size: 16px;">
+                                                オンラインショップにおけるお客さまの閲覧状況をリアルタイムで把握し、アクセスしている位置情報に基づき、最寄のショップスタッフとマッチング。
+                                                オンラインとオフラインの垣根を越えて、店舗への送客と店舗スタッフによるEC 購買サポートを実現します。</p>
+                                        </div>
+                                    </div>
+                                    <div class="user-img">
+                                        <img src="img/User Experience-img02.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="user-item">
+                                    <div class="user-img">
+                                        <img src="img/User Experience-img03.png" alt="">
+                                    </div>
+                                    <div class="user-content">
+                                        <div>
+                                            <p style="font-family: NotoSansJP-Bold;font-size: 21px;">新しいお買い物体験</p>
+                                            <p style="font-family: NotoSansJP-Regular;font-size: 16px;">
+                                                デジタル化された商品データを活用した店舗でのVRシミュレーション、ECシステム +
+                                                フルフィルメントサービスの店舗利用、オンラインストアの機能を活用して、最新のショールミング店舗を実現します。</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-item">
+                                    <div class="user-content">
+                                        <div>
+                                            <p style="font-family: NotoSansJP-Bold;font-size: 21px;">いつでもどこでも問合せ</p>
+                                            <p style="font-family: NotoSansJP-Regular;font-size: 16px;">
+                                                働き場所を選ばない、マルチチャネル対応のクラウドコンタクトセンター基盤。お客様の声をリアルタイムで可視化し、オペレータ対応を支援。集まった声を分析し、サービスの継続的改善を実現します。
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="user-img">
+                                        <img src="img/User Experience-img04.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End User Experience -->
                     </div>
                     <!-- End Breadcrumb -->
                 </div>
@@ -471,33 +542,28 @@
 
 </html>
 <script>
-    // window.onload = function() {
-    //     document.querySelectorAll('button').forEach(function (item) {
-    //         item.addEventListener('click', function (){
-    //             alert('click');
-    //         })
-    //     })
-    // }
+    var tabLinks = document.querySelectorAll(".tab-links");
+    var tabContent = document.querySelectorAll(".tab-content");
 
-    // function openTab(tabName) {
-    //     var i;
-    //     var x = document.getElementsByClassName("tab-content");
-    //     for (i = 0; i < x.length; i++) {
-    //         x[i].style.display = "none";
-    //     }
-    //     document.getElementById(tabName).style.display = "block";
-    // }
-    function setActiveTab(tab_id) {
-        $('.tab-button').removeClass('active');
-        $("button[data-tab='" + tab_id + "']").addClass('active');
-
-        $('.tab-content').removeClass('active');
-        $(tab_id).addClass('active');
-    };
-    jQuery(document).ready(function ($) {
-        $('.tab-button').click(function () {
-            var tab = $(this).data('tab');
-            setActiveTab(tab);
-        });
+    tabLinks.forEach(function (el) {
+        el.addEventListener("click", openTabs);
     });
+
+
+    function openTabs(el) {
+        var btn = el.currentTarget; // lắng nghe sự kiện và hiển thị các element
+        var tab = btn.dataset.tab; // lấy giá trị trong data-tab
+
+        tabContent.forEach(function (el) {
+            el.classList.remove("active");
+        });
+
+        tabLinks.forEach(function (el) {
+            el.classList.remove("active");
+        });
+
+        document.querySelector("#" + tab).classList.add("active");
+
+        btn.classList.add("active");
+    }
 </script>
